--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-Flask
-Flask-Cors
-Flask-SQLAlchemy
-Flask-Migrate
-PyJWT
-python-dotenv
-psycopg2-binary
-bcrypt
-requests
-Flask-JWT-Extended
+Flask==2.3.3
+Flask-Cors==4.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+Flask-JWT-Extended==4.5.3
+Flask-SocketIO==5.3.6
+python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+bcrypt==4.0.1
+requests==2.31.0
+eventlet==0.33.3
+PyJWT==2.8.0
+cloudinary==1.36.0
+pytz==2023.3
+gunicorn==21.2.0
+flask-socketio
+eventlet==0.33.0
