--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,3 +3,6 @@ nixPkgs = ["python311", "gcc", "gnumake", "libpq"]
 
 [phases.install]
 cmds = ["pip install -r requirements.txt"]
+
+[phases.build]
+cmds = ["echo 'Build complete'"]
